# Ship_Effects

Ship_Effects/: CMakeLists.txt  Pin Wiring.ods  ShipREADME.md  partitions.csv
Ship_Effects/TestAudio/: Ship_Project.yat  autoplay.txt  i2S_Test.csv  wled_presets.json
Ship_Effects/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  main.h  ota.c  ship_web.html  web_portal.cpp  web_portal.hpp  web_portal.html
Trail_Cam_V1/: .gitignore  CMakeLists.txt  CammREADME.md  partitions.csv
Trail_Cam_V1/main/: Kconfig.projbuild  camera_pins.h  main.cpp  web_portal.cpp  web_portal.hpp  web_portal.html
